[package]
name = "skj-udp1-simulator"
version = "1.0.4"
edition = "2021"


[dependencies]
tracing = "0.1.29"
tracing-subscriber = "0.3.2"
rand = "0.8.4"
rand_pcg = "0.3.1"
num = "0.4.0"
serde_json = "1.0.72"
ansi_term = "0.12.1"

[dependencies.serde]
version = "1.0.130"
features = [
    "serde_derive",
]

[dependencies.tokio]
version = "1.14.0"
features = [
    "full",
]
